declarator/test/snippets/ok/headers/ts_module1.h
#pragma once

#include <TS.h>

namespace global IS_TS_MODULE
{

namespace stuffs IS_TS_NAMESPACE
{

class TS_EXPORT Entity
{
public:
    TS_METHOD Entity() = default;
    TS_METHOD void entity();
};

}   // namespace stuffs
}   // namespace global



